@@ -144,9 +144,9 @@ function geodir_login_url($args=array()){
         $post = get_post($gd_page_id);
         $slug = $post->post_name;
         //$login_url = get_permalink($gd_page_id );// get_permalink can only be user after theme-Setup hook, any earlier and it errors
-        $login_url = home_url()."/$slug/";
+        $login_url = trailingslashit(home_url())."$slug/";
     }else{
-        $login_url = home_url()."/?geodir_signup=true";
+        $login_url = trailingslashit(home_url())."?geodir_signup=true";
     }
 
     if($args){
@@ -185,9 +185,9 @@ function geodir_info_url($args=array()){
         $post = get_post($gd_page_id);
         $slug = $post->post_name;
         //$login_url = get_permalink($gd_page_id );// get_permalink can only be user after theme-Setup hook, any earlier and it errors
-        $info_url = home_url()."/$slug/";
+        $info_url = trailingslashit(home_url())."$slug/";
     }else{
-        $info_url = home_url()."/";
+        $info_url = trailingslashit(home_url());
     }
 
     if($args){
