@@ -41,6 +41,7 @@ Double words like `Place Categories` now easier to translate as one - CHANGED
 Error message added when creation/edit of custom field fails - ADDED
 Options added for location specific urls like /country/city/ & /region/city/ – ADDED
 Able to get WP_Error on post save failure in geodir_save_listing() - CHANGED
+Trailing slash add for home_url() and site_url() urls using trailingslashit() - CHANGED
 
 v1.5.3
 If tax query has 'relation' set then it will throw WARNING in wp_list_pluck - FIXED
